create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1407,105 +1407,35 @@ body {
 .cid-rAqKVK5EX3 H2 {
   color: #ffffff;
 }
-.cid-rAqINVOyUO {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rAqINVOyUO h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-rAqINVOyUO p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-  padding-top: 2rem;
-}
-.cid-rAqINVOyUO .mbr-section-btn {
-  padding-top: 2.5rem;
-}
-.cid-rAqINVOyUO .mbr-section-btn a {
-  margin: 0;
-}
-.cid-rAqINVOyUO .mbr-text {
-  color: #767676;
-}
-.cid-rAqINVOyUO .card-wrapper {
-  height: 100%;
-  background: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-rAqINVOyUO .card:not(.last-child) {
-    padding-bottom: 2rem;
-  }
-}
-.cid-rAqINVOyUO .mbr-text,
-.cid-rAqINVOyUO .mbr-section-btn {
-  text-align: center;
-  color: #000000;
-}
-.cid-rAqINVOyUO .card-title {
-  text-align: center;
-}
-.cid-rAqInrUz0R {
+.cid-s6Tmj4E6G6 {
   padding-top: 45px;
-  padding-bottom: 30px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rAqInrUz0R .mbr-text,
-.cid-rAqInrUz0R blockquote {
+.cid-s6Tmj4E6G6 .mbr-text,
+.cid-s6Tmj4E6G6 blockquote {
   color: #767676;
 }
-.cid-rAqInrUz0R .mbr-text B {
+.cid-s6Tmj4E6G6 .mbr-text B {
   color: #000000;
 }
-.cid-rAqInrUz0R .mbr-text {
-  color: #000000;
-  text-align: center;
-}
-.cid-rAqInrUz0R .mbr-text DIV {
-  text-align: center;
-}
-.cid-rQh6uGivUc {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-rQh6uGivUc H2 {
-  color: #ffffff;
-}
-.cid-rQh8Ih3vb5 {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rQh8Ih3vb5 .mbr-text,
-.cid-rQh8Ih3vb5 blockquote {
-  color: #767676;
-}
-.cid-rQh8Ih3vb5 .mbr-text B {
-  color: #000000;
-}
-.cid-rQh8Ih3vb5 .mbr-text {
+.cid-s6Tmj4E6G6 .mbr-text {
   color: #000000;
   text-align: center;
 }
-.cid-rQh8Ih3vb5 .mbr-text DIV {
+.cid-s6Tmj4E6G6 .mbr-text DIV {
   text-align: center;
 }
-.cid-rQh6s8ek3X {
+.cid-s6TmjK6pMA {
   padding-top: 0px;
-  padding-bottom: 60px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
-.cid-rQh6s8ek3X P {
+.cid-s6TmjK6pMA P {
   color: #767676;
 }
-.cid-rQh6s8ek3X .mbr-text,
-.cid-rQh6s8ek3X .mbr-section-btn {
+.cid-s6TmjK6pMA .mbr-text,
+.cid-s6TmjK6pMA .mbr-section-btn {
   color: #000000;
 }
 .cid-r6PVvymGe0 .navbar {
@@ -6355,6 +6285,76 @@ body {
 .cid-rjXCAb6gvQ .user_desk {
   text-align: right;
 }
+.cid-s6TlJs25lE {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-s6TlJs25lE H2 {
+  color: #ffffff;
+}
+.cid-s6TlMAwSWZ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s6TlMAwSWZ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-s6TlMAwSWZ p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-s6TlMAwSWZ .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-s6TlMAwSWZ .mbr-section-btn a {
+  margin: 0;
+}
+.cid-s6TlMAwSWZ .mbr-text {
+  color: #767676;
+}
+.cid-s6TlMAwSWZ .card-wrapper {
+  height: 100%;
+  background: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-s6TlMAwSWZ .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-s6TlMAwSWZ .mbr-text,
+.cid-s6TlMAwSWZ .mbr-section-btn {
+  text-align: center;
+  color: #000000;
+}
+.cid-s6TlMAwSWZ .card-title {
+  text-align: center;
+}
+.cid-s6TlNgicD5 {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-s6TlNgicD5 .mbr-text,
+.cid-s6TlNgicD5 blockquote {
+  color: #767676;
+}
+.cid-s6TlNgicD5 .mbr-text B {
+  color: #000000;
+}
+.cid-s6TlNgicD5 .mbr-text {
+  color: #000000;
+  text-align: center;
+}
+.cid-s6TlNgicD5 .mbr-text DIV {
+  text-align: center;
+}
 .cid-r6FFv9zDQ5 {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -9404,7 +9404,7 @@ body {
 }
 .cid-rjXPlfirne {
   padding-top: 0px;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rjXPlfirne p {
@@ -9454,6 +9454,57 @@ body {
 }
 .cid-rjXPlfirne P {
   text-align: left;
+}
+.cid-s6TkjUwV6F {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s6TkjUwV6F P {
+  color: #767676;
+}
+.cid-s6TkjUwV6F .mbr-text,
+.cid-s6TkjUwV6F .mbr-section-btn {
+  color: #000000;
+}
+.cid-s6TiIZYIk8 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-s6TiIZYIk8 H2 {
+  color: #ffffff;
+}
+.cid-s6TiKoQmvi {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-s6TiKoQmvi .mbr-text,
+.cid-s6TiKoQmvi blockquote {
+  color: #767676;
+}
+.cid-s6TiKoQmvi .mbr-text B {
+  color: #000000;
+}
+.cid-s6TiKoQmvi .mbr-text {
+  color: #000000;
+  text-align: center;
+}
+.cid-s6TiKoQmvi .mbr-text DIV {
+  text-align: center;
+}
+.cid-s6TiJPqEzp {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s6TiJPqEzp P {
+  color: #767676;
+}
+.cid-s6TiJPqEzp .mbr-text,
+.cid-s6TiJPqEzp .mbr-section-btn {
+  color: #000000;
 }
 .cid-r7YMy10S66 {
   padding-top: 30px;
@@ -12005,6 +12056,45 @@ body {
 .cid-r6QgeW9ZBr H2 {
   color: #ffffff;
 }
+.cid-s6Q5KC1b1w {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-s6Q5KC1b1w H2 {
+  color: #ffffff;
+}
+.cid-s6Q6gJdZx5 {
+  padding-top: 45px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-s6Q6gJdZx5 .mbr-text,
+.cid-s6Q6gJdZx5 blockquote {
+  color: #767676;
+}
+.cid-s6Q6gJdZx5 .mbr-text B {
+  color: #000000;
+}
+.cid-s6Q6gJdZx5 .mbr-text {
+  color: #000000;
+  text-align: center;
+}
+.cid-s6Q6gJdZx5 .mbr-text DIV {
+  text-align: center;
+}
+.cid-s6Q6hkHzmw {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-s6Q6hkHzmw P {
+  color: #767676;
+}
+.cid-s6Q6hkHzmw .mbr-text,
+.cid-s6Q6hkHzmw .mbr-section-btn {
+  color: #000000;
+}
 .cid-r6Qgfj6dvK {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -12062,45 +12152,6 @@ body {
   color: #000000;
 }
 .cid-rkCA4AsFV7 B {
-  color: #000000;
-}
-.cid-s6Q5KC1b1w {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-s6Q5KC1b1w H2 {
-  color: #ffffff;
-}
-.cid-s6Q6gJdZx5 {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
-}
-.cid-s6Q6gJdZx5 .mbr-text,
-.cid-s6Q6gJdZx5 blockquote {
-  color: #767676;
-}
-.cid-s6Q6gJdZx5 .mbr-text B {
-  color: #000000;
-}
-.cid-s6Q6gJdZx5 .mbr-text {
-  color: #000000;
-  text-align: center;
-}
-.cid-s6Q6gJdZx5 .mbr-text DIV {
-  text-align: center;
-}
-.cid-s6Q6hkHzmw {
-  padding-top: 0px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-s6Q6hkHzmw P {
-  color: #767676;
-}
-.cid-s6Q6hkHzmw .mbr-text,
-.cid-s6Q6hkHzmw .mbr-section-btn {
   color: #000000;
 }
 .cid-r6Pqzhh3by {
