--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1407,94 +1407,24 @@ body {
 .cid-rAqKVK5EX3 H2 {
   color: #ffffff;
 }
-.cid-spsk2ui1Np {
-  padding-top: 45px;
+.cid-stHuTxwG7d {
+  padding-top: 30px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-spsk2ui1Np .mbr-section-subtitle {
-  color: #161616;
-  font-weight: 300;
+.cid-stHuTxwG7d .mbr-text,
+.cid-stHuTxwG7d blockquote {
+  color: #767676;
 }
-.cid-spsk2ui1Np .number-wrap {
-  color: #161616;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
+.cid-stHuTxwG7d .mbr-text B {
+  color: #000000;
+}
+.cid-stHuTxwG7d .mbr-text {
+  color: #000000;
   text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
 }
-.cid-spsk2ui1Np .number {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  text-transform: none;
-  letter-spacing: -2px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #1ea416;
-}
-.cid-spsk2ui1Np .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-spsk2ui1Np .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #1ea416;
-}
-.cid-spsk2ui1Np .countdown-cont {
-  max-width: 700px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-spsk2ui1Np .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-spsk2ui1Np .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-spsk2ui1Np .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-    max-width: 25%;
-    flex: 0 0 25%;
-  }
-  .cid-spsk2ui1Np .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-spsk2ui1Np .number,
-  .cid-spsk2ui1Np .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-spsk2ui1Np .period {
-    font-size: 0.8rem;
-  }
+.cid-stHuTxwG7d .mbr-text DIV {
+  text-align: center;
 }
 .cid-s6TmjK6pMA {
   padding-top: 15px;
