--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -727,6 +727,14 @@ section.lazy-placeholder:after {
 .cid-rjXMZbgj1m P {
   text-align: left;
 }
+.cid-sMnAFraSK2 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-sMnAFraSK2 H2 {
+  color: #ffffff;
+}
 .cid-r6PVvymGe0 .navbar {
   background: #ffffff;
   transition: none;
@@ -1124,6 +1132,184 @@ section.lazy-placeholder:after {
 .cid-r6PVvymGe0 .dropdown-item:hover {
   color: #19ca0f !important;
 }
+.cid-sMnANjEcAZ {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sMnANjEcAZ .mbr-section-subtitle {
+  color: #000000;
+  font-weight: 300;
+}
+.cid-sMnANjEcAZ .number-wrap {
+  color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-sMnANjEcAZ .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-sMnANjEcAZ .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-sMnANjEcAZ .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-sMnANjEcAZ .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-sMnANjEcAZ .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-sMnANjEcAZ .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-sMnANjEcAZ .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-sMnANjEcAZ .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-sMnANjEcAZ .number,
+  .cid-sMnANjEcAZ .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-sMnANjEcAZ .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-sMnBAhIfo0 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-sMnBAhIfo0 .mbr-section-subtitle {
+  color: #000000;
+  font-weight: 300;
+}
+.cid-sMnBAhIfo0 .number-wrap {
+  color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-sMnBAhIfo0 .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-sMnBAhIfo0 .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-sMnBAhIfo0 .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-sMnBAhIfo0 .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-sMnBAhIfo0 .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-sMnBAhIfo0 .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-sMnBAhIfo0 .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-sMnBAhIfo0 .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-sMnBAhIfo0 .number,
+  .cid-sMnBAhIfo0 .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-sMnBAhIfo0 .period {
+    font-size: 0.8rem;
+  }
+}
 .cid-raUAmsAs1d {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -1133,7 +1319,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-raUCnThbjW {
-  padding-top: 45px;
+  padding-top: 30px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
@@ -1153,7 +1339,7 @@ section.lazy-placeholder:after {
 }
 .cid-raUABne4Zh {
   padding-top: 0px;
-  padding-bottom: 30px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 .cid-raUABne4Zh .mbr-section-subtitle {
@@ -1249,14 +1435,6 @@ section.lazy-placeholder:after {
   .cid-raUABne4Zh .mbr-subscribe > * {
     margin: 0 0.5rem;
   }
-}
-.cid-rjSI9QAOjb {
-  padding-top: 0px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-rjSI9QAOjb P {
-  color: #767676;
 }
 .cid-r6KAjJ3ZSX {
   padding-top: 30px;
@@ -5732,45 +5910,8 @@ section.lazy-placeholder:after {
 .cid-r6QfCe7qbx H2 {
   color: #ffffff;
 }
-.cid-r6hk0HtDja {
-  padding-top: 75px;
-  padding-bottom: 30px;
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-}
-@media (min-width: 992px) {
-  .cid-r6hk0HtDja .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-r6hk0HtDja .mbr-figure {
-    padding-top: 3rem;
-  }
-}
-.cid-r6hk0HtDja .media-container-row {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-}
-@media (min-width: 992px) {
-  .cid-r6hk0HtDja .media-container-row .mbr-figure {
-    padding-left: 0;
-    padding-right: 4rem;
-  }
-}
-.cid-r6hk0HtDja .mbr-text,
-.cid-r6hk0HtDja .mbr-section-btn {
-  color: #000000;
-  text-align: left;
-}
-.cid-r6hk0HtDja .mbr-section-title {
-  color: #1ea416;
-  text-align: left;
-}
-.cid-r6hk0HtDja .mbr-section-title B {
-  color: #1ea416;
-}
 .cid-raNCQFWfVc {
-  padding-top: 0px;
+  padding-top: 30px;
   padding-bottom: 30px;
   background: linear-gradient(45deg, #ffffff, #ffffff);
 }
@@ -6483,82 +6624,92 @@ section.lazy-placeholder:after {
   padding-bottom: 30px;
   background-image: url("../../../assets/images/bookcase-books-bookshelves-256541-2000x1333.jpg");
 }
-.cid-rspEjb1fTb {
-  padding-top: 0px;
+.cid-sMnCnPbzI9 {
+  background: #ffffff;
+  padding-top: 45px;
   padding-bottom: 30px;
+}
+.cid-sMnCnPbzI9 .image-block {
+  margin: auto;
+}
+.cid-sMnCnPbzI9 figcaption {
+  position: relative;
+}
+.cid-sMnCnPbzI9 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-sMnCnPbzI9 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-sMnDzt3ksl {
+  padding-top: 0px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rspEjb1fTb .nav-tabs {
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  border-bottom: none;
+.cid-sMnDzt3ksl .mbr-text,
+.cid-sMnDzt3ksl blockquote {
+  color: #767676;
 }
-.cid-rspEjb1fTb .nav-tabs .nav-link {
-  box-sizing: border-box;
+.cid-sMnDzt3ksl .mbr-text B {
   color: #000000;
-  font-style: normal;
-  font-weight: 500;
-  border-radius: 3px;
-  border: 1px solid #000000;
-  padding: 1rem 3rem;
-  margin: 0.4rem .8rem !important;
-  transition: all .3s;
 }
-.cid-rspEjb1fTb .nav-tabs .nav-link:hover {
-  background-color: #1ea416;
+.cid-sMnDzt3ksl .mbr-text {
+  color: #000000;
+  text-align: center;
 }
-.cid-rspEjb1fTb .nav-tabs .nav-link:focus {
-  box-shadow: none;
-  background-color: #1ea416;
+.cid-sMnDzt3ksl .mbr-text DIV {
+  text-align: center;
 }
-.cid-rspEjb1fTb .nav-tabs .nav-link.active {
-  font-weight: 500;
-  color: #ffffff;
-  font-style: normal;
-  border: none;
-  background: #1ea416;
+.cid-sMnDzt3ksl .mbr-text P {
+  text-align: left;
 }
-.cid-rspEjb1fTb .nav-tabs .nav-link.active:hover {
-  border: none;
+.cid-sMnDQrvWYI {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  position: relative;
+  background-color: #ffffff;
 }
-.cid-rspEjb1fTb .mbr-section-subtitle {
+.cid-sMnDQrvWYI p {
   color: #767676;
 }
-.cid-rspEjb1fTb p {
-  color: #767676;
+.cid-sMnDQrvWYI .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
 }
-.cid-rspEjb1fTb .media-container-row {
-  -webkit-flex-direction: row-reverse;
-  flex-direction: row-reverse;
+.cid-sMnDQrvWYI .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
 }
-.cid-rspEjb1fTb .mbr-figure {
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-  -webkit-align-self: flex-start;
-  align-self: flex-start;
-  padding-right: 4rem;
-  padding-right: 0;
-  padding-left: 4rem;
+.cid-sMnDQrvWYI .card .card-header a.panel-title {
+  margin-bottom: 0;
+  margin-top: -1px;
+  font-weight: 500;
+  font-style: normal;
+  display: block;
+  text-decoration: none !important;
+  line-height: normal;
 }
-.cid-rspEjb1fTb .mbr-text {
-  word-break: break-word;
+.cid-sMnDQrvWYI .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
 }
-@media (max-width: 991px) {
-  .cid-rspEjb1fTb .media-container-row {
-    -webkit-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-  }
-  .cid-rspEjb1fTb .mbr-figure {
-    padding-right: 0;
-    padding-left: 0;
-    padding-bottom: 2rem;
-    padding-bottom: 0;
-    padding-top: 2rem;
-  }
+.cid-sMnDQrvWYI .card .card-header a.panel-title h4 {
+  border: 1px solid #dfdfdf;
+  padding: 1.3rem 2rem;
+  margin-bottom: 0;
 }
-.cid-rspEjb1fTb P {
+.cid-sMnDQrvWYI .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-sMnDQrvWYI H4 {
+  color: #000000;
+  text-align: center;
+}
+.cid-sMnDQrvWYI .panel-text {
   color: #000000;
 }
 .cid-rjMQB1e7Qd {
