--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -674,6 +674,19 @@ section.lazy-placeholder:after {
   padding-bottom: 0px;
   background-color: #ffffff;
 }
+.cid-sMpJsM5Zh9 {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 60px;
+}
+.cid-sMpJsM5Zh9 .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-sMpJsM5Zh9 .video-block {
+    width: 100% !important;
+  }
+}
 .cid-rjXMZbgj1m {
   padding-top: 0px;
   padding-bottom: 30px;
@@ -5909,6 +5922,40 @@ section.lazy-placeholder:after {
 }
 .cid-r6QfCe7qbx H2 {
   color: #ffffff;
+}
+.cid-sMpJT5gfLG {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+}
+@media (min-width: 992px) {
+  .cid-sMpJT5gfLG .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sMpJT5gfLG .mbr-figure {
+    padding-top: 3rem;
+  }
+}
+.cid-sMpJT5gfLG .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-sMpJT5gfLG .media-container-row .mbr-figure {
+    padding-left: 0;
+    padding-right: 4rem;
+  }
+}
+.cid-sMpJT5gfLG .mbr-text,
+.cid-sMpJT5gfLG .mbr-section-btn {
+  color: #000000;
+  text-align: left;
+}
+.cid-sMpJT5gfLG .mbr-section-title {
+  color: #1ea416;
+  text-align: left;
 }
 .cid-raNCQFWfVc {
   padding-top: 30px;
