--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6510,49 +6510,16 @@ section.lazy-placeholder:after {
 .cid-sMnDzt3ksl .mbr-text P {
   text-align: left;
 }
-.cid-sMnDQrvWYI {
+.cid-tihNSCLKks {
   padding-top: 0px;
   padding-bottom: 45px;
-  position: relative;
   background-color: #ffffff;
 }
-.cid-sMnDQrvWYI p {
+.cid-tihNSCLKks P {
   color: #767676;
 }
-.cid-sMnDQrvWYI .card {
-  border-radius: 0px;
-  margin-bottom: -1px;
-}
-.cid-sMnDQrvWYI .card .card-header {
-  border-radius: 0px;
-  border: 0px;
-  padding: 0;
-}
-.cid-sMnDQrvWYI .card .card-header a.panel-title {
-  margin-bottom: 0;
-  margin-top: -1px;
-  font-weight: 500;
-  font-style: normal;
-  display: block;
-  text-decoration: none !important;
-  line-height: normal;
-}
-.cid-sMnDQrvWYI .card .card-header a.panel-title:focus {
-  text-decoration: none !important;
-}
-.cid-sMnDQrvWYI .card .card-header a.panel-title h4 {
-  border: 1px solid #dfdfdf;
-  padding: 1.3rem 2rem;
-  margin-bottom: 0;
-}
-.cid-sMnDQrvWYI .card .card-header a.panel-title h4 .sign {
-  padding-right: 1rem;
-}
-.cid-sMnDQrvWYI H4 {
-  color: #000000;
-  text-align: center;
-}
-.cid-sMnDQrvWYI .panel-text {
+.cid-tihNSCLKks .mbr-text,
+.cid-tihNSCLKks .mbr-section-btn {
   color: #000000;
 }
 .cid-rjMQB1e7Qd {
